--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ header nav ul li a.active {
 
 .card img {
   width: 100%;
-  height: auto;
+  height: 250px;
 }
 
 .description {
@@ -196,6 +196,10 @@ footer {
   list-style: disc;
 }
 
+.term-service-anchor {
+  padding: 30px 0;
+}
+
 @media only screen and (max-width: 900px) {
   .container {
     width: 95%;
@@ -211,6 +215,11 @@ footer {
 
   header {
     padding: 0 30px;
+  }
+
+  .card img {
+    width: 100%;
+    height: 150px;
   }
 
   .flex {
@@ -249,6 +258,12 @@ footer {
   header nav ul li a {
     margin: 5px 0;
   }
+
+  .card img {
+    width: 100%;
+    height: 150px;
+  }
+
   .flex {
     flex-direction: column;
     justify-content: center;
