--- a/styles.css
+++ b/styles.css
@@ -149,8 +149,8 @@ header nav ul li a.active {
 /* MAIN */
 
 .flex {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
   gap: 50px;
   justify-content: center;
   align-items: center;
@@ -159,8 +159,8 @@ header nav ul li a.active {
 .card {
   cursor: pointer;
   border-radius: 6px;
-  max-width: 400px;
-  max-width: 400px;
+  max-width: 300px;
+  height: 300px;
   color: #fff;
   height: auto;
   border: 2px solid #444;
@@ -175,7 +175,7 @@ header nav ul li a.active {
 }
 
 .description {
-  padding: 20px;
+  padding: 10px;
 }
 
 /* FOOTER */
@@ -197,7 +197,13 @@ footer {
 }
 
 .term-service-anchor {
-  padding: 30px 0;
+  margin: 20px 0;
+  display: flex;
+  color: #444;
+}
+
+.footer-text {
+  padding: 20px 0;
 }
 
 @media only screen and (max-width: 900px) {
@@ -223,6 +229,7 @@ footer {
   }
 
   .flex {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -265,6 +272,7 @@ footer {
   }
 
   .flex {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
