--- a/styles.css
+++ b/styles.css
@@ -157,10 +157,12 @@ header nav ul li a.active {
 
 .flex {
   display: grid;
+
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 50px;
+  gap: 100px;
   justify-content: center;
   align-items: center;
+  padding: 0 30px;
 }
 
 .card {
@@ -170,7 +172,7 @@ header nav ul li a.active {
   height: 300px;
   color: #fff;
   height: auto;
-  /* border: 2px solid #444; */
+
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
@@ -229,8 +231,8 @@ footer {
   }
 
   .card {
-    width: 300px;
-    height: 300px;
+    width: 270px;
+    height: 270px;
   }
 
   header {
@@ -243,8 +245,8 @@ footer {
   }
 
   .flex {
-    display: flex;
-    flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
   }
