--- a/styles.css
+++ b/styles.css
@@ -169,9 +169,8 @@ header nav ul li a.active {
   cursor: pointer;
   border-radius: 6px;
   max-width: 300px;
-  height: 300px;
+  height: 450px;
   color: #fff;
-  height: auto;
 
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
@@ -184,6 +183,18 @@ header nav ul li a.active {
   overflow: hidden;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
+  position: relative;
+}
+
+.soon {
+  position: absolute;
+  /* top: 0; */
+  color: #444;
+  z-index: 3;
+  background-color: rgb(183, 136, 136);
+  border-top-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  padding: 6px;
 }
 
 .description {
@@ -222,17 +233,17 @@ footer {
   color: #444;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 950px) {
   .container {
-    width: 95%;
+    width: 85%;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 20px 0;
     overflow-x: hidden;
   }
 
   .card {
     width: 270px;
-    height: 270px;
+    height: 450px;
   }
 
   header {
@@ -253,9 +264,9 @@ footer {
 }
 @media only screen and (max-width: 700px) {
   .container {
-    width: 95%;
+    width: 85%;
     margin: 0 auto;
-    padding: 50px 0;
+    padding: 20px 0;
     overflow-x: hidden;
   }
 
@@ -282,10 +293,18 @@ footer {
     margin: 5px 0;
   }
 
+  .card {
+    height: auto;
+  }
+
   .card img {
     width: 100%;
     height: 150px;
     object-fit: cover;
+  }
+
+  .description {
+    padding: 20px;
   }
 
   .flex {
