--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,10 @@ header nav ul li a.active {
 /*  */
 
 .ads {
+  /* padding: 100px; */
+  /* box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px; */
 }
 
 .Advertise-text {
@@ -124,9 +128,9 @@ header nav ul li a.active {
   /* color: #fff; */
   padding: 30px;
   background-color: #fff;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+  /* box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px; */
 }
 /*  */
 
@@ -145,9 +149,9 @@ header nav ul li a.active {
   text-align: center;
   outline: none;
   font-size: 1.3rem;
-  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+  /* box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px; */
 }
 
 /*  */
@@ -244,6 +248,7 @@ footer {
   .card {
     width: 300px;
     height: auto;
+
     justify-content: center;
     align-items: center;
   }
@@ -258,10 +263,13 @@ footer {
   }
 
   .flex {
-    grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr; */
+    display: flex;
+    flex-wrap: wrap;
     /* flex-direction: column; */
     justify-content: center;
     align-items: center;
+    padding: 100px;
   }
 }
 @media only screen and (max-width: 700px) {
@@ -315,5 +323,6 @@ footer {
     justify-content: center;
     align-items: center;
     gap: 100px;
+    padding: 100px;
   }
 }
