--- a/styles.css
+++ b/styles.css
@@ -319,7 +319,7 @@ footer {
 
   .flex {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     justify-content: center;
     align-items: center;
     gap: 100px;
